plugins {
    id 'java'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

java {
    // Set the target compatibility to Java 17
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.opencsv:opencsv:5.7.1'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
    implementation 'org.jetbrains:annotations:24.0.0'
    testImplementation platform('org.junit:junit-bom:5.9.2')
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.0'
}

test {
    useJUnitPlatform()

     jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
}